tests/ui/errors/snapshots/infer_generic_alias_to_cross_module_tuple_struct_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native constructor as a value
   ╭─[main.lis:7:11]
 6 │ fn main() {
 7 │   let f = G
   ·           ┬
   ·           ╰── native constructors must be called directly
 8 │   let _ = f
   ╰────
  help: Use a closure instead: `|args| G(args)` · code: [infer.native_constructor_value]
