tests/ui/errors/snapshots/infer_go_builtin_append.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(items: Slice<int>) -> Slice<int> {
 3 │   append(items, 1)
   ·   ───┬──
   ·      ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `append` builtin. Use `items.append(1)` · code: [resolve.name_not_found]
