tests/ui/errors/snapshots/infer_go_builtin_close.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(ch: Channel<int>) {
 3 │   close(ch);
   ·   ──┬──
   ·     ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `close` builtin. Use `ch.close()` · code: [resolve.name_not_found]
