tests/ui/errors/snapshots/infer_go_builtin_copy.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(dst: Slice<int>, src: Slice<int>) {
 3 │   copy(dst, src);
   ·   ──┬─
   ·     ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `copy` builtin. Use `dst.copy_from(src)` · code: [resolve.name_not_found]
