tests/ui/errors/snapshots/infer_go_builtin_delete.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(m: Map<string, int>) {
 3 │   delete(m, "key");
   ·   ───┬──
   ·      ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `delete` builtin. Use `map.delete(key)` · code: [resolve.name_not_found]
