tests/ui/errors/snapshots/infer_go_builtin_len.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(items: Slice<int>) -> int {
 3 │   len(items)
   ·   ─┬─
   ·    ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `len` builtin. Use `items.length()` · code: [resolve.name_not_found]
