tests/ui/errors/snapshots/infer_go_builtin_make.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let ch = make(10);
   ·            ──┬─
   ·              ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `make` builtin. Use `Slice.new<T>()`, `Map.new<K, V>()`, or `Channel.new<T>()` · code: [resolve.name_not_found]
