tests/ui/errors/snapshots/infer_go_builtin_new.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let p = new(int);
   ·           ─┬─
   ·            ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `new` builtin. Use `MyStruct { field: value }` or `MyType.new()` · code: [resolve.name_not_found]
