tests/ui/errors/snapshots/infer_go_builtin_println.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Name not found
   ╭─[test.lis:3:3]
 2 │ fn test(name: string) {
 3 │   println(name)
   ·   ───┬───
   ·      ╰── not a Lisette builtin
 4 │ }
   ╰────
  help: Lisette has no `print` builtin. Use `fmt.Println`, `fmt.Printf`, etc. after `import "go:fmt"` · code: [resolve.name_not_found]
